[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/World.gd" type="Script" id=1]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 110.0
margin_top = 290.0
margin_right = 913.0
margin_bottom = 310.0
custom_constants/separation = 274

[node name="ShplistButton" type="Button" parent="CenterContainer/HBoxContainer"]
margin_right = 72.0
margin_bottom = 20.0
text = "Show List"

[node name="PushButton" type="Button" parent="CenterContainer/HBoxContainer"]
margin_left = 346.0
margin_right = 430.0
margin_bottom = 20.0
text = "Push to list"

[node name="NewShplistButton" type="Button" parent="CenterContainer/HBoxContainer"]
margin_left = 704.0
margin_right = 803.0
margin_bottom = 20.0
text = "Show new list"

[node name="Shoplist" type="ColorRect" parent="."]
margin_left = 16.0
margin_top = 136.0
margin_right = 289.0
margin_bottom = 280.0
__meta__ = {
"_edit_group_": true
}

[node name="ShplistLabel" type="Label" parent="Shoplist"]
margin_right = 272.0
margin_bottom = 144.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Click \"Show List\" to
show the shoplist"
align = 1
valign = 1

[node name="Newlist" type="ColorRect" parent="."]
margin_left = 728.0
margin_top = 136.0
margin_right = 1001.0
margin_bottom = 280.0
__meta__ = {
"_edit_group_": true
}

[node name="NewShplistLabel" type="Label" parent="Newlist"]
margin_right = 272.0
margin_bottom = 144.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Click \"Show new list\" to show the list
you just made"
align = 1
valign = 1

[node name="Shoplist2" type="ColorRect" parent="."]
margin_left = 368.0
margin_top = 136.0
margin_right = 641.0
margin_bottom = 280.0
__meta__ = {
"_edit_group_": true
}

[node name="InsElmnts" type="LineEdit" parent="Shoplist2"]
margin_right = 273.0
margin_bottom = 144.0
align = 1

[node name="Label" type="Label" parent="Shoplist2"]
margin_right = 273.0
margin_bottom = 48.0
text = "Insert elements to the new shoplist
V"
align = 1
valign = 1

[connection signal="pressed" from="CenterContainer/HBoxContainer/ShplistButton" to="." method="_on_ShplistButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/PushButton" to="." method="_on_PushButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/NewShplistButton" to="." method="_on_NewShplistButton_pressed"]
